# rust-study

./: Cargo.toml  main
.cargo/: config.toml
fibonacci/src/: lib.rs
guessing_number/: Cargo.toml
guessing_number/src/: lib.rs
hello_cargo/src/: lib.rs
rect/src/: lib.rs
search/: test.txt
src/: lib.rs  main.rs
