[package]
name = "study_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hello_cargo = { path = "./hello_cargo" }
guessing_number = { path = "./guessing_number" }
fibonacci = { path = "./fibonacci" }
rect = { path = "./rect" }
